--- a/.github/workflows/reopen_issue7.yml
+++ b/.github/workflows/reopen_issue7.yml
@@ -2,8 +2,8 @@ name: Reopen Issue 7
 
 on:
   schedule:
-    # Ejecutar cada 30 minutos
-    - cron: '*/30 * * * *'
+    # Ejecutar cada 2 horas
+    - cron: '0 */2 * * *'
   workflow_dispatch: # Permite ejecución manual
 
 jobs:
